tests/rosetta/transpiler/Zig/abundant-odd-numbers.error
zig build: exit status 1
/tmp/abundant-odd-numbers.zig:9:9: error: local variable shadows declaration of 'sum'
/tmp/abundant-odd-numbers.zig:40:1: note: declared here
